# database-from-scratch

./: .gitignore  CMakeLists.txt  Makefile  README.md  repl.c  sqlite.c
.github/workflows/: ci.yml
spec/: database_spec.rb
tools/: pre-commit
